--- a/templates/layout.html
+++ b/templates/layout.html
@@ -144,6 +144,23 @@
     #auth {
         display: block;
         margin: 0 auto;
+        margin-bottom: 20px;
+        padding: 12px 16px;
+        border-radius: 4px;
+        border: 1px solid #f2f2f2;
+        color: #f2f2f2;
+        font-size: 14px;
+        background-color: #15161b;
+        -webkit-transition: color, background-color .6s;
+        -ms-transition: color, background-color .6s;
+        -moz-transition: color, background-color .6s;
+        -o-transition: color, background-color .6s;
+        transition: color, background-color .6s;
+    }
+
+    #auth:hover {
+        color: #d94e5d;
+        background-color: #f2f2f2;
     }
     
     .BMap_cpyCtrl,
@@ -159,17 +176,26 @@
         <div class="menu-wrap">
             <nav class="menu">
                 <div class="icon-list">
-                    <a href="{{url_for('index')}}" id="nav1"><i class="fa fa-fw fa-star"></i><span>平台概览</span></a>
-                    <a href="{{url_for('user')}}" id="nav2"><i class="fa fa-fw fa-user"></i><span>个人中心</span></a>
-                    <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a> {% if auth['is_auth'] %}
-                    <a href="{{url_for('user')}}">
-                        <div style="text-align:center;">
-                            <span class="fa fa-fw fa-user-circle" style="display:block;font-size:30px;"></span>
-                            <p>{{ auth['Username'] }}</p>
-                        </div>
-                    </a>
+                    <a href="{{url_for('index')}}" id="nav1"><i class="fa fa-fw fa-paper-plane"></i><span>平台概览</span></a>
+                    <a href="{{url_for('user')}}" id="nav2"><i class="fa fa-fw fa-star"></i><span>个人中心</span></a>
+                    <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a> {% if auth['is_auth'] or 1 %}
+                    <div style="text-align:center;margin:30px 0;">
+                        <a href="{{url_for('user')}}">
+                            <div style="text-align:center;">
+                                <span class="fa fa-fw fa-user" style="display:block;font-size:35px;color:#f2f2f2;margin:0 auto;margin-bottom:10px;"></span>
+                                <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
+                                <p style="font-size:13px;margin-bottom:6px;"><span style="font-size:27px;color:#d94e5d;margin:0;margin-right:10px;">{{ auth['count'] }}</span></p>
+                                <p style="color:#888;font-size:13px;">授权登陆用户总数</p>
+                            </div>
+                        </a>
+                    </div>
                     {% else %}
-                    <a href="https://ac.ppdai.com/oauth2/login?AppID=2fb2e79ec7914ed99065d5cea99f95e0&ReturnUrl=http://zhanghonglun.cn/pdi/auth" id="auth">授权登陆</a> {% endif %}
+                    <div style="text-align:center;margin:30px 0;">
+                        <a href="https://ac.ppdai.com/oauth2/login?AppID=2fb2e79ec7914ed99065d5cea99f95e0&ReturnUrl=http://zhanghonglun.cn/pdi/auth" id="auth">授权登陆</a>
+                        <p style="font-size:13px;margin-bottom:6px;"><span style="font-size:27px;color:#d94e5d;margin:0;margin-right:10px;">{{ auth['count'] }}</span></p>
+                        <p style="color:#888;font-size:13px;">授权登陆用户总数</p>
+                    </div>
+                    {% endif %}
                 </div>
             </nav>
         </div>
