--- a/templates/layout.html
+++ b/templates/layout.html
@@ -180,7 +180,7 @@
                     <a href="{{url_for('user')}}" id="nav2"><i class="fa fa-fw fa-star"></i><span>个人中心</span></a>
                     <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a> {% if auth['is_auth'] or 1 %}
                     <div style="text-align:center;margin:30px 0;">
-                        <a href="{{url_for('user')}}">
+                        <a href="{{url_for('user')}}" style="padding-left:0;padding-right:0;">
                             <div style="text-align:center;">
                                 <span class="fa fa-fw fa-user" style="display:block;font-size:35px;color:#f2f2f2;margin:0 auto;margin-bottom:10px;"></span>
                                 <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
