--- a/templates/index.html
+++ b/templates/index.html
@@ -233,11 +233,10 @@ p {
 {% endblock %} {% block body %}
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3" style="text-align:center;">
-        <img src="{{url_for('static', filename='img/ppd.png')}}" alt="" style="width:110px;margin-top:10px;margin-bottom:25px;">
+        <img src="{{url_for('static', filename='img/ppd.png')}}" alt="" style="width:110px;margin-top:25px;margin-bottom:27px;">
         <p>信用标数量<span style="color:#50a3ba;font-size:20px;margin-left:6px;margin-right:6px;">328,553</span></p>
         <p>借款总金额<span style="color:#96b37e;font-size:20px;margin-left:6px;margin-right:6px;">1,453,458,316</span>元</p>
-        <p style="margin-top:18px;margin-bottom:15px;">时间跨度<span style="color:#eac736;margin-left:6px;margin-right:6px;">2015-01-01</span>至<span style="color:#eac736;margin-left:6px;margin-right:6px;">2017-01-30</span></p>
-        <p>用户数量<span style="color:#d94e5d;font-size:20px;margin-left:6px;margin-right:6px;">99999</span></p>
+        <p style="margin-top:18px;margin-bottom:15px;">时间跨度<span style="color:#eac736;margin-left:6px;margin-right:6px;">2015-01-01</span>至<span style="color:#d94e5d;margin-left:6px;margin-right:6px;">2017-01-30</span></p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
         <div id="plot1"></div>
