add titles for index

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -119,20 +119,8 @@
     
     .plot-title {
         padding: 5px 10px;
-        font-size: 12px;
-        background-color: #3ca23c;
-        z-index: 999;
-        color: #fff;
-        width: 100%;
-        text-align: left;
-        margin-bottom: 0;
-        box-shadow: 0px 3px 5px rgba(20, 20, 20, 0.3);
-    }
-    
-    .plot-title {
-        padding: 5px 10px;
-        font-size: 12px;
-        background-color: #3C833C;
+        font-size: 13px;
+        background-color: #3c8376;
         z-index: 999;
         color: #f2f2f2;
         width: 100%;
@@ -167,6 +155,7 @@
     .anchorBL {
         display: none;
     }
+
     </style>
     {% block style %} {% endblock %}
 </head>
